# Technologie-informatyczne-II

./: main.c
LAB_030324/: CMakeLists.txt  unit_tests.c
LAB_030324/functions/: f_display_array.h
LAB_030324/simple_math/: f_mean.c  simple_math.h
LAB_100324/: CMakeLists.txt  main.c
functions/: f_display_array.c  f_user_input.c  f_user_input.h
simple_math/: f_max.c  f_min.c
